@@ -21,7 +21,7 @@
 <p><a href="http://crantastic.org/packages/data-table" target="_top">User reviews</a> and <a href="http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table" target="_top">data.table wiki</a></p>
 
 <p>Latest <a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/NEWS?view=markup&root=datatable" target="_top">NEWS</a>
-from <a href="https://r-forge.r-project.org/R/?group_id=240" target="_top">1.8.0 on R-Forge</a> (in development).
+from <a href="https://r-forge.r-project.org/R/?group_id=240" target="_top">1.7.9 on R-Forge</a> (in development).
   Check <a href="https://r-forge.r-project.org/tracker/?group_id=240" target="_top">known bugs and feature requests</a>.</p>
 
 <dl><dt>Vignettes (latest revisions):</dt>
